devel/improvement: use fw=true instead of class='fa-fw'

--- a/templates/default/cash/cashimport.html
+++ b/templates/default/cash/cashimport.html
@@ -68,7 +68,7 @@
 	{foreach $divisions as $division}{if $division.list}
 		<TR>
 			<TD colspan="4" class="dark bold">
-				{icon name="division" class="fa-fw"}
+				{icon name="division" fw=true}
 				{$division.name|escape}
 			</TD>
 			<TD colspan="3" class="dark text-right">
