--- a/templates/default/document/documentgen.html
+++ b/templates/default/document/documentgen.html
@@ -38,7 +38,7 @@
 	<THEAD>
 	<TR>
 		<TD>
-			{icon name="document" class="fa-fw"}
+			{icon name="document" fw=true}
 		</TD>
 		<TD class="bold nobr">
 			{trans("Title:")}
@@ -51,7 +51,7 @@
 	<TBODY>
 	<TR>
 		<TD>
-			{icon name="document" class="fa-fw"}
+			{icon name="document" fw=true}
 		</TD>
 		<TD class="bold nobr">
 			{trans("First number:")}
@@ -65,7 +65,7 @@
 	</TR>
 	<TR>
 		<TD>
-			{icon name="period" class="fa-fw"}
+			{icon name="period" fw=true}
 		</TD>
 		<TD class="bold">
 			{trans("Period:")}
@@ -77,7 +77,7 @@
 	</TR>
 	<TR>
 		<TD>
-			{icon name="description" class="fa-fw"}
+			{icon name="description" fw=true}
 		</TD>
 		<TD class="bold">
 			{trans("Description:")}
@@ -88,7 +88,7 @@
 	</TR>
 	<TR>
 		<TD>
-			{icon name="type" class="fa-fw"}
+			{icon name="type" fw=true}
 		</TD>
 		<TD class="bold">
 			{trans("Type:")}
@@ -105,7 +105,7 @@
 	</TR>
 	<TR>
 		<TD>
-			{icon name="template" class="fa-fw"}
+			{icon name="template" fw=true}
 		</TD>
 		<TD class="bold">
 			{trans("Template:")}
@@ -121,7 +121,7 @@
 	</TR>
 	<TR id="document-file-row"{if !$document.type} style="display: none;"{/if}>
 		<TD>
-			{icon name="import" class="fa-fw"}
+			{icon name="import" fw=true}
 		</TD>
 		<TD class="bold">
 			{trans("Files:")}
@@ -132,7 +132,7 @@
 	</TR>
 	<TR id="attachment-row"{if !$attachment_result} style="display: none;"{/if}>
 		<TD>
-			{icon name="import" class="fa-fw"}
+			{icon name="import" fw=true}
 		</TD>
 		<TD class="bold nobr">
 			{trans("Document attachments:")}
@@ -143,7 +143,7 @@
 	</TR>
 	<TR>
 		<TD>
-			{icon name="confirm" class="fa-fw"}
+			{icon name="confirm" fw=true}
 		</TD>
 		<TD class="bold nobr">
 			<label for="closed">{trans("Confirmed:")}</label>
@@ -154,7 +154,7 @@
 	</TR>
 	<TR>
 		<TD>
-			{icon name="customer" class="fa-fw"}
+			{icon name="customer" fw=true}
 		</TD>
 		<TD class="bold nobr">
 			{trans("Customers:")}
@@ -177,7 +177,7 @@
 	</TR>
 	<TR>
 		<TD>
-			{icon name="ipnetwork" class="fa-fw"}
+			{icon name="ipnetwork" fw=true}
 		</TD>
 		<TD class="bold nobr">
 			{trans("Network:")}
@@ -193,7 +193,7 @@
 	</TR>
 	<TR>
 		<TD>
-			{icon name="customergroup" class="fa-fw"}
+			{icon name="customergroup" fw=true}
 		</TD>
 		<TD class="bold nobr">
 			{trans("Group:")}
