--- a/templates/default/document/documentreference.html
+++ b/templates/default/document/documentreference.html
@@ -1,6 +1,6 @@
 {if $cid && $references}
 <TD>
-    {icon name="document" class="fa-fw"}
+    {icon name="document" fw=true}
 </TD>
 <TD class="bold nobr">
     {trans("Reference document:")}
