--- a/templates/default/node/nodeaddbox.html
+++ b/templates/default/node/nodeaddbox.html
@@ -155,7 +155,7 @@
 
 							<tr>
 								<td>
-									{icon name="login" class="fa-fw" tip="<!node>Login"}
+									{icon name="login" fw=true tip="<!node>Login"}
 								</td>
 								<td>
 									<input type="text" name="nodedata[login]" value="{$nodedata.login|escape}"
@@ -165,7 +165,7 @@
 
 							<TR>
 								<TD>
-									{icon name="password" class="fa-fw" tip="Password:"}
+									{icon name="password" fw=true tip="Password:"}
 								</TD>
 								<TD>
 									<INPUT type="text" name="nodedata[passwd]" value="{$nodedata.passwd|escape}"
