--- a/templates/default/node/nodeeditbox.html
+++ b/templates/default/node/nodeeditbox.html
@@ -181,7 +181,7 @@
 
 								<tr>
 									<td>
-										{icon name="login" class="fa-fw"}
+										{icon name="login" fw=true}
 									</td>
 									<td>
 										{trans("<!node>Login")}
@@ -194,7 +194,7 @@
 
 								<tr>
 									<td>
-										{icon name="password" class="fa-fw"}
+										{icon name="password" fw=true}
 									</td>
 									<td>
 										{trans("Password:")}
