--- a/templates/default/node/nodesearch.html
+++ b/templates/default/node/nodesearch.html
@@ -49,7 +49,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="login" class="fa-fw"} {trans("<!node>Login")}
+			{icon name="login" fw=true} {trans("<!node>Login")}
 		</TD>
 		<TD>
 			<INPUT TYPE="text" NAME="search[login]" value="{$nodesearch.login}" {tip text="Enter node login or it's fragment"}>
