--- a/templates/default/promotion/promotionschemaadd.html
+++ b/templates/default/promotion/promotionschemaadd.html
@@ -31,7 +31,7 @@
 	<THEAD>
 	<TR>
 		<TD>
-			{icon name="money" class="fa-fw"}
+			{icon name="money" fw=true}
 		</TD>
 		<TD class="bold">
 			{trans("Name:")}
@@ -44,7 +44,7 @@
 	<TBODY>
 	<TR>
 		<TD>
-			{icon name="calendar" class="fa-fw"}
+			{icon name="calendar" fw=true}
 		</TD>
 		<TD class="bold">
 			{trans("Periods:")}
@@ -72,7 +72,7 @@
 	</TR>
 	<TR>
 		<TD>
-			{icon name="info" class="fa-fw"}
+			{icon name="info" fw=true}
 		</TD>
 		<TD class="bold">
 			{trans("Description:")}
