--- a/templates/default/rt/rtmessageview.html
+++ b/templates/default/rt/rtmessageview.html
@@ -48,7 +48,7 @@
 		    {if $message.userid}
 				{icon name="user"}
 			{else}
-				{icon name="requestor" class="fa-fw"}
+				{icon name="requestor" fw=true}
 			{/if}
 		</TD>
 		<TD class="nobr bold">
