--- a/templates/default/tariff/tariffedit.html
+++ b/templates/default/tariff/tariffedit.html
@@ -77,7 +77,7 @@
                         <TABLE CLASS="tariff_tab bold-second">
                             <tr>
                                 <td>
-                                    {icon name="value" class="fa-fw"}
+                                    {icon name="value" fw=true}
                                 </td>
                                 <td>
                                     {trans("Value:")}
@@ -100,7 +100,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    {icon name="document" class="fa-fw"}
+                                    {icon name="document" fw=true}
                                 </td>
                                 <td>
                                     {trans("Reward/penalty for")}
