--- a/templates/default/document/documentadd.html
+++ b/templates/default/document/documentadd.html
@@ -71,7 +71,7 @@
     <THEAD>
 	<TR>
 		<TD>
-			{icon name="document" class="fa-fw"}
+			{icon name="document" fw=true}
 		</TD>
 		<TD class="bold nobr">
 			{trans("Title:")}
@@ -84,7 +84,7 @@
     <TBODY>
 	<TR id="customerselection">
 		<TD>
-			{icon name="customer" class="fa-fw"}
+			{icon name="customer" fw=true}
 		</TD>
 		<TD class="bold nobr">
 			{trans("Customer:")}
@@ -96,7 +96,7 @@
 	</TR>
 	<TR>
 		<TD>
-			{icon name="period" class="fa-fw"}
+			{icon name="period" fw=true}
 		</TD>
 		<TD class="bold">
 			{trans("Period:")}
@@ -118,7 +118,7 @@
 	</TR>
 	<TR{if $document.closed} style="display: none;"{/if}>
 		<TD>
-			{icon name="period" class="fa-fw"}
+			{icon name="period" fw=true}
 		</TD>
 		<TD class="bold">
 			{trans("Wait for customer action till:")}
@@ -133,7 +133,7 @@
 	</TR>
 	<TR>
 		<TD>
-			{icon name="description" class="fa-fw"}
+			{icon name="description" fw=true}
 		</TD>
 		<TD class="bold">
 			{trans("Description:")}
@@ -144,7 +144,7 @@
 	</TR>
 	<TR>
 		<TD>
-			{icon name="type" class="fa-fw"}
+			{icon name="type" fw=true}
 		</TD>
 		<TD class="bold">
 			{trans("Type:")}
@@ -163,7 +163,7 @@
 	</TR>
 	<TR id="templates" style="display:{if $document.type<0}table-row{else}none{/if}">
 		<TD>
-			{icon name="template" class="fa-fw"}
+			{icon name="template" fw=true}
 		</TD>
 		<TD class="bold">
 			{trans("Template:")}
@@ -181,7 +181,7 @@
 	</tr>
 	<TR id="document-file-row"{if !$document.type} style="display: none;"{/if}>
 		<TD>
-			{icon name="import" class="fa-fw"}
+			{icon name="import" fw=true}
 		</TD>
 		<TD class="bold">
 			{trans("Files:")}
@@ -192,7 +192,7 @@
 	</TR>
 	<TR id="attachment-row"{if !$attachment_result} style="display: none;"{/if}>
 		<TD>
-			{icon name="import" class="fa-fw"}
+			{icon name="import" fw=true}
 		</TD>
 		<TD class="bold nobr">
 			{trans("Document attachments:")}
@@ -203,7 +203,7 @@
 	</TR>
 	<TR>
 		<TD>
-			{icon name="id" class="fa-fw"}
+			{icon name="id" fw=true}
 		</TD>
 		<TD class="bold">
 			{trans("Number:")}
@@ -217,7 +217,7 @@
 	</TR>
 	<TR>
 		<TD>
-			{icon name="confirm" class="fa-fw"}
+			{icon name="confirm" fw=true}
 		</TD>
 		<TD class="bold nobr">
 			<label for="closed">{trans("Confirmed:")}</label>
