--- a/templates/default/document/documentpromotions.html
+++ b/templates/default/document/documentpromotions.html
@@ -6,7 +6,7 @@
 	<THEAD>
 	<TR class="hand lmsbox-titlebar" data-lmsbox-content="documentpromotionpanel">
 		<TD>
-			{icon name="money" class="fa-fw"}
+			{icon name="money" fw=true}
 			<span class="bold">{trans("Promotion Schema:")}</span>
 		</TD>
 	</TR>
