--- a/templates/default/node/nodeinfobox.html
+++ b/templates/default/node/nodeinfobox.html
@@ -132,7 +132,7 @@
 								{if $nodeinfo.login}
 									<tr>
 										<td>
-											{icon name="login" class="fa-fw"}
+											{icon name="login" fw=true}
 										</td>
 										<td>
 											{trans("<!node>Login")}
@@ -148,7 +148,7 @@
 								{if $nodeinfo.passwd}
 								<tr>
 									<td>
-										{icon name="password" class="fa-fw"}
+										{icon name="password" fw=true}
 									</td>
 									<td>
 										{trans("Password:")}
