--- a/templates/default/node/nodelist.html
+++ b/templates/default/node/nodelist.html
@@ -81,12 +81,12 @@
 	<TR {tip text="Click on column name to change sorting order"}>
 		<td scope="col">
 			<span class="nobr">
-				{icon name="node" class="fa-fw"}
+				{icon name="node" fw=true}
 				<A href="?m=nodelist&o=name{if $filter.direction == "asc" && $filter.order == "name"},desc{/if}">{trans("Name:")}</A>{if $filter.order == "name"} <IMG SRC="img/{if $filter.direction == "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}
 			</span>
 			<br>
 			<span class="nobr lighter">
-				{icon name="customer" class="fa-fw"}
+				{icon name="customer" fw=true}
 				<A href="?m=nodelist&o=owner{if $filter.direction == "asc" && $filter.order == "owner"},desc{/if}">{trans("Customer:")}</A>{if $filter.order == "owner"} <IMG SRC="img/{if $filter.direction == "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}
 			</span>
 		</td>
@@ -98,14 +98,14 @@
 			<img src="img/empty.gif" alt="" width="1" height="16"><A href="?m=nodelist&amp;o=ownerid{if $filter.direction == "asc" && $filter.order == "ownerid"},desc{/if}">{trans("Customer ID:")}</A>{if $filter.order == "ownerid"} <IMG SRC="img/{if $filter.direction == "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}
 		</td>
 		<td scope="col" class="lighter nobr">
-			{icon name="ipnetwork" class="fa-fw"}
+			{icon name="ipnetwork" fw=true}
 			{trans("Network:")} /
 			<a href="?m=nodelist&o=ip{if $filter.direction == "asc" && $filter.order == "ip"},desc{/if}">{trans("IP address:")}</a>
 			{if $filter.order == "ip"} <img src="img/{if $filter.direction == "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}
 			<a href="?m=nodelist&o=ip_pub{if $filter.direction == "asc" && $filter.order == "ip_pub"},desc{/if}">({trans("Pub. IP address:")})</a>
 			{if $filter.order == "ip_pub"}<img src="img/{if $filter.direction == "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}
 			<br>
-			{icon name="mac" class="fa-fw"}
+			{icon name="mac" fw=true}
 			<a href="?m=nodelist&o=mac{if $filter.direction == "asc" && $filter.order == "mac"},desc{/if}">{trans("MAC address:")}</a>
 			{if $filter.order == "mac"} <img src="img/{if $filter.direction == "desc"}asc{else}desc{/if}_order.gif" alt="">{/if}
 		</td>
@@ -235,13 +235,13 @@
 			{if $node.lastonline}
 				{if ($smarty.now-$node.lastonline) > $lastonline_limit}
 					{capture assign="lastonline"}{t a=$node.lastonlinedate}Last online: $a{/t}{/capture}
-					{icon name="nodeoff" class="fa-fw" tip=$lastonline}
+					{icon name="nodeoff" fw=true tip=$lastonline}
 				{else}
 					{capture assign="lastonline"}{t a="on-line"}Last online: $a{/t}{/capture}
-					{icon name="nodeon" class="fa-fw" tip=$lastonline}
+					{icon name="nodeon" fw=true tip=$lastonline}
 				{/if}
 			{else}
-				{icon name="nodeunk" class="fa-fw"}
+				{icon name="nodeunk" fw=true}
 			{/if}
 			{if $node.info}
 			    {icon name="info" tip=$node.info}
@@ -249,7 +249,7 @@
 			{$node.name}</A>{if $node.locked}{icon name="lock" tip="<!node>lock is active" class="node-lock-icon"}{/if}</span>
 			<br>
 			<span class="nobr{if ! $node.access} blend{/if}">
-				{icon name="customer" class="fa-fw"}
+				{icon name="customer" fw=true}
 				<a href="?m=customerinfo&id={$node.ownerid}" class="lms-ui-tooltip-customerinfo" data-resourceid="{$node.ownerid}">{$node.owner|truncate:40:"&hellip;":true|replace:" ":"&nbsp;"}</a>
 			</span>
 		</TD>
@@ -261,10 +261,10 @@
 			<SPAN class="blend">({$node.ownerid|string_format:"%04d"})</span>
 		</TD>
 		<TD class="nobr">
-			{icon name="ipnetwork" class="fa-fw"}
+			{icon name="ipnetwork" fw=true}
 			{$node.netname} / {$node.ip} {if $node.ip_pub != "0.0.0.0"}({$node.ip_pub}){/if}
 			<br>
-			{icon name="mac" class="fa-fw"}
+			{icon name="mac" fw=true}
 			{$node.mac|replace:",":"</span><br><span class=\"nobr\"><i class=\"lms-ui-icon-mac fa-fw\"></i>"}
 		</TD>
 		<TD class="lms-ui-buttons nobr">
