--- a/templates/default/numberplan/numberplanedit.html
+++ b/templates/default/numberplan/numberplanedit.html
@@ -13,7 +13,7 @@
     <thead>
 		<TR>
 			<TD>
-				{icon name="id" class="fa-fw"}
+				{icon name="id" fw=true}
 			</TD>
 			<TD class="bold">
 				{trans("Template:")}
@@ -27,7 +27,7 @@
     <tbody>
 		<TR>
 			<TD>
-				{icon name="document" class="fa-fw"}
+				{icon name="document" fw=true}
 			</TD>
 			<TD class="bold nobr">
 				{trans("Document type:")}
@@ -42,7 +42,7 @@
 		</TR>
 		<TR>
 			<TD>
-				{icon name="calendar" class="fa-fw"}
+				{icon name="calendar" fw=true}
 			</TD>
 			<TD class="bold">
 				{trans("Period:")}
@@ -57,7 +57,7 @@
 		</TR>
 		<TR>
 			<TD class="valign-top">
-				{icon name="division" class="fa-fw"}
+				{icon name="division" fw=true}
 			</TD>
 			<TD class="bold nobr valign-top">
 				{trans("Division")}
@@ -74,7 +74,7 @@
 		</TR>
 		<TR>
 			<TD class="valign-top">
-				{icon name="user" class="fa-fw"}
+				{icon name="user" fw=true}
 			</TD>
 			<TD class="bold nobr valign-top">
 				{trans("User")}
@@ -91,7 +91,7 @@
 		</TR>
 		<TR>
 			<TD>
-				{icon name="option" class="fa-fw"}
+				{icon name="option" fw=true}
 			</TD>
 			<TD class="bold nobr">
 				<label for="numberplanedit_isdefault">{trans("Default:")}</label>
