--- a/templates/default/tariff/tariffinfo.html
+++ b/templates/default/tariff/tariffinfo.html
@@ -98,7 +98,7 @@
                         <TABLE CLASS="tariff_tab bold-second">
                             <tr>
                                 <td>
-                                    {icon name="value" class="fa-fw"}
+                                    {icon name="value" fw=true}
                                 </td>
                                 <td>
                                     {trans("Value:")}
