--- a/templates/default/customer/customergrouplist.html
+++ b/templates/default/customer/customergrouplist.html
@@ -23,7 +23,9 @@
 			{trans("Members:")}
 		</TD>
 		<TD scope="col" class="text-right nobr">
-			<span class="text-right"><A HREF="?m=customergroupadd"><IMG src="img/group.gif"> {trans("Add group")}</A></span><BR>{t a=$listdata.total|default:"0"}Total: $a{/t}
+			{button icon="customergroup" label="Add group" href="?m=customergroupadd"}
+			<br>
+			{t a=$listdata.total|default:"0"}Total: $a{/t}
 		</TD>
 	</TR>
 	</THEAD>
@@ -50,13 +52,12 @@
 		</TD>
 		<TD class="lms-ui-buttons text-right nobr">
 			{if $customergroup.customerscount}
-			<A class="delete-group-alert">
+				{button type="link" class="delete-group-alert" icon="delete" tip="Delete"}
 			{else}
-			<A class="delete-group" href="?m=customergroupdel&id={$customergroup.id}">
+				{button type="link" class="delete-group" icon="delete" tip="Delete" data_customer_group_id=$customergroup.id}
 			{/if}
-			<IMG src="img/delete.gif" alt="{trans("Delete")}" title="{trans("Delete")}"></A>
-			<A href="?m=customergroupedit&amp;id={$customergroup.id}"><IMG src="img/edit.gif" alt="{trans("Edit")}" title="{trans("Edit")}"></A>
-			<A href="?m=customergroupinfo&amp;id={$customergroup.id}"><IMG src="img/info.gif" alt="{trans("Info")}" title="{trans("Info")}"></A>
+			{button type="link" icon="edit" tip="Edit" href="?m=customergroupedit&id={$customergroup.id}"}
+			{button type="link" icon="info" tip="Info" href="?m=customergroupinfo&id={$customergroup.id}"}
 		</TD>
 	</TR>
 	{foreachelse}
@@ -71,9 +72,8 @@
 	<script>
 		$('.delete-group').click(function() {
 			var name = $(this).closest('tr').attr('data-name');
-			console.log('name=', name);
 			confirmDialog($t("Are you sure, you want to remove group '$a'?", name), this).done(function() {
-				location.href = $(this).attr('href');
+				location.href = '?m=customergroupdel&id=' + $(this).attr('data-customer-group-id');
 			});
 			return false;
 		});
