enhancement: waiting assignments filter in customer search form

--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -409,6 +409,7 @@
 				<option value="-3">{trans('active, with invoice')}</option>
 				<option value="-5">{trans('active, with pro forma')}</option>
 				<option value="-4">{trans('suspended')}</option>
+				<option value="-6">{trans('waiting')}</option>
 			</select>
 			<input type="text" id="assignment-days" name="search[assignments]" value="" disabled required
 				size="5" placeholder="{trans("days")}" style="display: none;" pattern="[0-9]+">
