bugfix: revert old postal address icon

--- a/templates/default/customer/customereditbox.html
+++ b/templates/default/customer/customereditbox.html
@@ -204,7 +204,7 @@
 					</tr>
 
 					<tr>
-						<td class="valign-top"><i class="lms-ui-icon-mail fa-fw" alt="" title="{trans('postal address')}"></i></td>
+						<td class="valign-top"><i class="lms-ui-icon-message fa-fw" alt="" title="{trans('postal address')}"></i></td>
 						<td>
 							{$postal_addr = 0}
 							{foreach $customerinfo.addresses as $v}
