--- a/templates/default/customer/customerinfobox.html
+++ b/templates/default/customer/customerinfobox.html
@@ -116,7 +116,7 @@
 							{foreach $customerinfo.addresses as $v}
 								{if $v.location_address_type == $smarty.const.POSTAL_ADDRESS}
 								<tr>
-									<td style="width: 1%;">{icon name="mail" fw=true tip="postal address"}</td>
+									<td style="width: 1%;">{icon name="message" fw=true tip="postal address"}</td>
 									<td style="width: 99%;">
 										<span title="{trans('postal address')}">{if $v.location_name}{$v.location_name|escape}, {/if}{if $v.teryt}{t a=htmlspecialchars($v.location)}$a (TERRIT){/t}{else}{$v.location|escape}{/if}
 											<a href="https://www.google.com/maps/place/{$v.location}" title="{trans("Google Maps")}">{icon name="location"}</a>
