--- a/templates/default/customer/customeradd.html
+++ b/templates/default/customer/customeradd.html
@@ -240,7 +240,7 @@
 				</tr>
 
 				<tr>
-					<td class="valign-top"><i class="lms-ui-icon-mail fa-fw" title="{trans('postal address')}"></i></td>
+					<td class="valign-top"><i class="lms-ui-icon-message fa-fw" title="{trans('postal address')}"></i></td>
 					<td>
 						{$addr_found = 0}
 						{foreach $customeradd.addresses as $v}
