--- a/templates/default/customer/customeradd.html
+++ b/templates/default/customer/customeradd.html
@@ -129,7 +129,7 @@
 				{if $divisions}
 				<TR>
 					<TD>
-						<img src="img/division.gif" alt="">
+						{icon name="division" fw=true}
 					</TD>
 					<TD>
 						<SELECT size="1" name="customeradd[divisionid]" {tip text="Select division" trigger="divisionid"}>
@@ -143,7 +143,7 @@
 				{if $groups}
 				<TR>
 					<TD>
-						<IMG SRC="img/group.gif" alt="">
+						{icon name="cg" fw=true}
 					</TD>
 					<TD>
 						<SELECT SIZE="1" NAME="customeradd[group]" {tip text="Select group to assign to customer" trigger="group"}>
@@ -157,7 +157,7 @@
 				{/if}
 				<TR>
 					<TD>
-						<IMG SRC="img/folder.gif" alt="">
+						{icon name="legal-personality" fw=true}
 					</TD>
 					<TD>
 						<label>
@@ -177,7 +177,7 @@
 
 				<TR>
 					<TD>
-						<i class="lms-ui-icon-legal-personality"></i>
+						{icon name="legal-personality" fw=true}
 					</TD>
 					<TD>
 						<select name="customeradd[flags][]" {tip text="Select customer flags (optional)" class="lms-ui-multiselect"}
@@ -196,7 +196,7 @@
 				{$addr_counter = 0}
 
 				<tr>
-					<td class="valign-top"><i class="lms-ui-icon-home fa-fw" title="{trans('billing address')}"></i></td>
+					<td class="valign-top">{icon name="home" fw=true tip="billing address"}</td>
 					<td>
 						{$addr_found = 0}
 						{foreach $customeradd.addresses as $v}
@@ -240,7 +240,7 @@
 				</tr>
 
 				<tr>
-					<td class="valign-top"><i class="lms-ui-icon-mail fa-fw" title="{trans('postal address')}"></i></td>
+					<td class="valign-top">{icon name="message" fw=true tip="postal address"}</td>
 					<td>
 						{$addr_found = 0}
 						{foreach $customeradd.addresses as $v}
@@ -277,9 +277,9 @@
 				<tr>
 					<td class="valign-top">
 						{if $v.location_address_type == $smarty.const.DEFAULT_LOCATION_ADDRESS}
-							<i class="lms-ui-icon-default-customer-location fa-fw location-box-image" title="{trans('default location address')}"></i>
+							{icon name="default-customer-location" class="location-box-image" fw=true tip="default location address"}
 						{else}
-							<i class="lms-ui-icon-customer-location fa-fw location-box-image" title="{trans('location/recipient address')}"></i>
+							{icon name="customer-location" class="location-box-image" fw=true tip="location/recipient address"}
 						{/if}
 					</td>
 					<td>
@@ -316,7 +316,7 @@
 				{include file="customer/customercontacts.html" customerinfo=$customeradd formelemprefix="customeradd"}
 				<TR>
 					<TD>
-						<IMG src="img/pin.gif" alt="">
+						{icon name="customer-pin-code" fw=true}
 					</TD>
 					<TD>
 						<INPUT type="text" required size="{$pin_max_size}" value="{if $customeradd.pin}{$customeradd.pin}{/if}" name="customeradd[pin]" {tip text=$pin_tip trigger="pin"}>&nbsp;
@@ -325,7 +325,7 @@
 				</TR>
 				<TR>
 					<TD class="valign-top">
-						<IMG src="img/serialnumber.gif" alt="">
+						{icon name="user-id-number" fw=true}
 					</TD>
 					<TD class="cell-flex">
                         <div>
@@ -408,7 +408,7 @@
 				</TR>
 				<TR>
 					<TD class="valign-top">
-						<IMG src="img/options.gif" alt="">
+						{icon name="paytype" fw=true}
 					</TD>
 					<TD>
 						<TABLE>
@@ -461,7 +461,7 @@
 				</TR>
 				<TR>
 					<TD class="valign-top">
-						<i class="lms-ui-icon-consent"></i>
+						{icon name="consent" fw=true}
 					</TD>
 					<TD>
 						<TABLE cellpadding="0" class="lms-ui-separated-rows">
@@ -503,27 +503,25 @@
 				</COLGROUP>
 				{block name="customeradd-rightcolumn"}
 				<TR>
-					<TD><IMG src="img/info1.gif" alt=""></TD>
+					<TD>{icon name="optional-info" fw=true}</TD>
 					<TD>
 						<TEXTAREA rows="10" cols="60" name="customeradd[info]" class="lms-ui-wysiwyg-editor" {tip text="Enter additional information (optional)"}{if isset($customeradd.wysiwyg.info)} data-wysiwyg="{$customeradd.wysiwyg.info}"{/if}>{$customeradd.info|escape}</TEXTAREA>
 					</TD>
 				</TR>
 				<TR>
-					<TD><IMG src="img/warningon.gif" alt=""></TD>
+					<TD>{icon name="warning" fw=true}</TD>
 					<TD>
 						<TEXTAREA rows="10" cols="60" name="customeradd[message]" class="lms-ui-wysiwyg-editor" {tip text="Enter notice contents (optional)"}{if isset($customeradd.wysiwyg.message)} data-wysiwyg="{$customeradd.wysiwyg.message}"{/if}>{$customeradd.message|escape}</TEXTAREA>
 					</TD>
 				</TR>
 				<TR>
-					<TD><IMG src="img/note.gif" alt=""></TD>
+					<TD>{icon name="notes" fw=true}</TD>
 					<TD>
 						<TEXTAREA rows="10" cols="60" name="customeradd[notes]" class="lms-ui-wysiwyg-editor" {tip text="Enter notes (optional)"}{if isset($customeradd.wysiwyg.notes)} data-wysiwyg="{$customeradd.wysiwyg.notes}"{/if}>{$customeradd.notes|escape}</TEXTAREA>
 					</TD>
 				</TR>
 				<TR>
-					<TD>
-						<i class="lms-ui-icon-memo"></i>
-					</TD>
+					<TD>{icon name="memo" fw=true}</TD>
 					<TD>
 						<TEXTAREA name="customeradd[documentmemo]" class="lms-ui-wysiwyg-editor"
 								  COLS="60" ROWS="10" {tip text="Enter document memo (optional)"}
