--- a/templates/default/rt/rtticketinfobox.html
+++ b/templates/default/rt/rtticketinfobox.html
@@ -393,7 +393,7 @@
 					{button type="link-button" icon="childticket" label="Create child ticket" tip="Create child ticket" href="?m=rtticketadd&parentid={$ticket.ticketid}"}
 				{/if}
 				{if count($ticket.images)}
-					{button id="ticket-gallery-button" icon="gallery" label="Attachment gallery" tip="Attachment gallery" data_gallery="{json_encode($ticket.images)}"}
+					{button id="ticket-gallery-button" icon="gallery" label="Attachment gallery" tip="Attachment gallery" data_gallery="{base64_encode(json_encode($ticket.images))}"}
 				{/if}
 				{if $ticket.deleted == 1 && $ticket.deltime != 0 && (ConfigHelper::checkPrivilege('helpdesk_advanced_operations'))}
 					{button id="restore-rtticket" icon="restore" label="Restore<!RT>" tip="Restore<!RT>" data_href="?m=rtrestore&id={$ticket.ticketid}&taction=restore"}
@@ -512,7 +512,7 @@
 		});
 
 		$('#ticket-gallery-button').click(function() {
-			showGallery(JSON.parse($(this).attr('data-gallery')));
+			showGallery(JSON.parse(Base64.decode($(this).attr('data-gallery'))));
 		});
 	});
 
