--- a/templates/default/customer/customeradd.html
+++ b/templates/default/customer/customeradd.html
@@ -192,7 +192,7 @@
 				</TR>
 				{$addr_counter = 0}
 				<tr>
-					<td class="valign-top"><i class="lms-ui-icon-message fa-fw" title="{trans('postal address')}"></i></td>
+					<td class="valign-top"><i class="lms-ui-icon-home fa-fw" title="{trans('billing address')}"></i></td>
 					<td>
 						{$addr_found = 0}
 						{foreach $customeradd.addresses as $v}
